# lofty-rs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: README.md  create_tag.rs  read_file.rs
examples/: tag_reader.rs  tag_stripper.rs  tag_writer.rs
examples/custom_resolver/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aacfile_read_from.rs  aifffile_read_from.rs  apefile_read_from.rs  filetype_from_buffer.rs  flacfile_read_from.rs  mp4file_read_from.rs  mpcfile_read_from.rs  mpegfile_read_from.rs  opusfile_read_from.rs  picture_from_ape_bytes.rs  picture_from_flac_bytes.rs  picture_from_reader.rs  pictureinformation_from_jpeg.rs  pictureinformation_from_png.rs  probe_read.rs  speexfile_read_from.rs  vorbisfile_read_from.rs  wavfile_read_from.rs  wavpackfile_read_from.rs
moosicbox_lofty_attr/: Cargo.toml  README.md
moosicbox_lofty_attr/src/: internal.rs  lib.rs  lofty_file.rs  lofty_tag.rs  util.rs
ogg_pager/: CHANGELOG.md  Cargo.toml
src/: error.rs  file.rs  lib.rs  picture.rs  probe.rs  resolve.rs  traits.rs
src/aac/: mod.rs  read.rs
src/ape/: mod.rs
src/flac/: block.rs  mod.rs  read.rs  write.rs
src/mp4/: mod.rs  properties.rs
src/mpeg/: mod.rs  read.rs
src/musepack/: mod.rs
src/ogg/: picture_storage.rs  tag.rs
src/tag/: mod.rs
src/wavpack/: mod.rs
tests/: hound.rs
tests/files/: aac.rs  aiff.rs  ape.rs  flac.rs  mp4.rs  mpc.rs  mpeg.rs  ogg.rs  wav.rs  wavpack.rs  zero_sized.rs
tests/fuzz/: aifffile_read_from.rs  flacfile_read_from.rs  main.rs  mp4file_read_from.rs  mpegfile_read_from.rs  opusfile_read_from.rs  (+6 more)
(+28 files in other folders)
