[package]
name = "moosicbox_lofty_attr"
version = "0.1.0"
authors = [
	"Serial <69764315+Serial-ATA@users.noreply.github.com>",
	"Braden Steffaniak",
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for Lofty, modified for MoosicBox"
repository = "https://github.com/Serial-ATA/lofty-rs"
readme = "README.md"
include = ["src", "Cargo.toml", "../LICENSE-*"]

[dependencies]
syn = { version = "2.0.25", features = ["full", "parsing"] }
quote = "1.0.29"
proc-macro2 = "1.0.64"

[lib]
proc-macro = true
